Making project a micronaut cli application.